# SCC_TEST

./: README.md  lidar_readme.txt  readme.txt  xavier_can.txt
TEST_LAUNCH/: darknet_ros_test.launch
acc_logic_ros/: CMakeLists.txt  package.xml
acc_logic_ros/launch/: ai_acc_ros3.launch
acc_logic_ros/src/: acc_logic_node.cpp  acc_logic_node2.cpp
sample_code/: adas_main.c  cansocker.c  cansocket.h  scc_test.cpp  scc_test.h
